--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
   "require-dev": {
     "phpunit/phpunit": "^6.0.0",
     "squizlabs/php_codesniffer": "^3.2",
-    "phpstan/phpstan": "^0.9.2"
+    "phpstan/phpstan": "^0.9.2",
+    "infection/infection": "^0.8.2"
   }
 }
